2005-03-18  Marek Safar  <marek.safar@seznam.cz>

	* modifiers.cs (Modifiers.PROPERTY_CUSTOM): New constant for
	property accessor modifiers.

	* class.cs (FieldMember.ApplyAttributeBuilder): Don't allow apply
	fixed buffer attribute (CS1716).
	(PropertyMethod.HasCustomAccessModifier): When property accessor
	has custom modifier.
	
	* ecore (PropertyExpr.DoResolve): Add CS0271 for custom	accessor
	modifiers.
	(PropertyExpr.DoResolveLValue): Add CS0272.

2005-03-17  Miguel de Icaza  <miguel@novell.com>

	* convert.cs: When converting to a pointer, use the proper Conv.U
	or Conv.I depending on the source data type.

	* cs-tokenizer.cs: Make the size for large decimal constants,
	fixes #72957. 

2005-03-17  Martin Baulig  <martin@ximian.com>

	* anonymous.cs (AnonymousMethod.method_modifiers): Change default
	from `Modifiers.INTERNAL' to `Modifiers.PRIVATE'.  Fixes #73260.

2005-03-17  Martin Baulig  <martin@ximian.com>

	* anonymous.cs (AnonymousMethod.EmitMethod): Changed return type
	to bool so we can return an error condition.
	(AnonymousDelegate.Emit): Check whether AnonymousMethod.EmitMethod()
	returned an error.

2005-03-16  Zoltan Varga  <vargaz@freemail.hu>

	* attribute.cs: Encode ThrowOnUnmappableChar and BestFitMapping
	attributes.

2005-03-16  Raja R Harinath  <rharinath@novell.com>

	Remove TypeManager.LookupType and TypeManager.LookupTypeDirect.
	Refactor to avoid traversing the list of assemblies, and to avoid
	string concatenation.
	* typemanager.cs (guid_attr_type): Remove.
	(negative_hits, pointers, references): Remove hashes.
	(type_hash): New.
	(GetConstructedType): New.  Uses type_hash to handle constructed
	types (arrays, references, pointers).
	(GetReferenceType, GetPointerType): Use it.
	(GetNestedType): New.  Uses type_hash to handle nested types of
	reflected types.
	(LookupType, LookupTypeDirect): Remove.
	(CoreLookupType): Inline parts of old LookupTypeDirect code.  Use
	'types' hash and LookupTypeReflection directly.